// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeroSection Component should render HeroSection correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 undefinedpx;
}

.c1 {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

<div
  className="c0 "
>
  <img
    className="c1"
    src="https://images.unsplash.com/photo-1475351177616-1e5e440dccef?ixlib=rb-1.2.1&auto=format&fit=crop&w=2550&q=80"
  />
</div>
`;

exports[`HeroSection Component should render HeroSectionCapture correctly 1`] = `
.c0 {
  width: display:flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="c0"
/>
`;

exports[`HeroSection Component should render HeroSectionDescription correctly 1`] = `
<h5
  className=""
/>
`;

exports[`HeroSection Component should render HeroSectionImage correctly 1`] = `
.c0 {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

<img
  className="c0"
/>
`;

exports[`HeroSection Component should render HeroSectionTitle correctly 1`] = `
<h3
  className=""
/>
`;

exports[`HeroSection Component should render HeroSectionWrapper correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 undefinedpx;
}

<div
  className="c0"
/>
`;
